--- a/src/app.html
+++ b/src/app.html
@@ -1,12 +1,12 @@
 <!doctype html>
-<html lang="%paraglide.lang%" data-theme="default">
+<html lang="%paraglide.lang%" data-theme="default" class="bg-sidebar">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/assets/logo/variants/logo-0.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link href="/assets/fonts/Cherish-Regular.ttf" rel="prefetch" type="font/ttf" />
-		<meta name="theme-color" content="#ffffff" />
-		<meta name="theme-color" content="#0c0a09" media="(prefers-color-scheme: dark)" />
+		<meta name="theme-color" content="#fafaf9" />
+		<meta name="theme-color" content="#1c1917" media="(prefers-color-scheme: dark)" />
 
 		<!-- FONTS -->
 		<link
